# lba2-classic-community

./: CMakeLists.txt  README.md
SOURCES/: ACTOR_EDITOR.CPP  ACTOR_EDITOR.H  AMBIANCE.CPP  BUGGY.CPP  BUILDING_KITBASHER.CPP  BUILDING_KITBASHER.H  CMakeLists.txt  COMMON.H  COMPORTE.CPP  C_EXTERN.H  DEFINES.H  DISKFUNC.CPP  EDITOR.CPP  EDITOR.H  EDITOR_JSON.H  EXTFUNC.CPP  EXTRA.CPP  FICHE.CPP  FREECAM.CPP  FREECAM.H  GAMEMENU.CPP  GLOBAL.CPP  HOLO.H  HOLOGLOB.CPP  HOLOPLAN.CPP  INPUT.CPP  INVENT.CPP  INVENT.H  MEM.CPP  MESSAGE.CPP  OBJECT.CPP  OBJECT.H  PERSO.CPP  SAVEGAME.CPP  WAYPOINT_EDITOR.CPP  WAYPOINT_EDITOR.H
docs/: CAMERA.md  CONSOLE.md  DEBUG.md  EFR.md  IMPACT_SCRIPTS_LIST.md  LBA2CC_EDITOR.md
mods/: BUILDING_PARTS.md  EFR.md  EFR_SCENES.md  EFR_TEXT.md  EFR_VARS.md  MOD_BODY_18.O3D  MOD_BODY_21.O3D  MOD_BODY_3.O3D  citadel_editor_demo.json  citadel_island_sewers_sendell_seal_passage.grf  citadel_island_sewers_twinsen_life.ls2s  citadel_island_shop.gr2  citadel_island_shop.ls2  efr.json  efr_bootstrap.json  ferry_routes.json  gawleys_horn.json  gawleys_horn.o3d  green_tralu.json  green_tralu.lm2  hyper_zip_pack.json  hyper_zip_pack.lm2  hyper_zippack.json  proxima_decor.json  proxima_holomap.json  proxima_holomap.lim  proxima_island.json  proxima_text.json  raymond.json  raymond.lm2  sendell_seals.json  tomato.lm2  tomatoes.json  twinsen_mage_gawleys_horn.o3d  twinsen_mage_jetpack.o3d  twinsen_mage_protopack.o3d  (+7 more)
tests/editor_terrain_patterns/: CMakeLists.txt  test_editor_terrain_patterns.cpp
tests/freecam/: CMakeLists.txt  test_freecam_math.cpp
(+98 files in other folders)
